--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Studio</title>
 </head>
 <body>
@@ -67,10 +67,10 @@
         <div class="main_section_four">
               <h3>Наша команда</h3>
               <div class="main_section_four_img">
-                <img src="/image/Ihor.jpg" alt="Ihor">
-                <img src="/image/Olha.jpg" alt="Olha">
-                <img src="/image/Mykola.jpg" alt="Mykola">
-                <img src="/image/Myhalo.jpg" alt="Myhalo">
+                <img width="500" src="/image/Ihor.jpg" alt="Ihor">
+                <img width="500" src="/image/Olha.jpg" alt="Olha">
+                <img width="500" src="/image/Mykola.jpg" alt="Mykola">
+                <img width="500" src="/image/Myhalo.jpg" alt="Myhalo">
               </div>
         </div>
     </main>
