--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
         <div class="main_section_three">
              <h3>Чим ми займаємося</h3>
              <div class="main_section_three_img">
-                <img src="/image/computer.jpg" alt="computer">
-                <img src="/image/telephon.jpg" alt="telephon">
-                <img src="/image/tablet.jpg" alt="tablet">
+                <img src="image/computer.jpg" alt="computer">
+                <img src="image/telephon.jpg" alt="telephon">
+                <img src="image/tablet.jpg" alt="tablet">
              </div>
         </div>
         <div class="main_section_four">
               <h3>Наша команда</h3>
               <div class="main_section_four_img">
-                <img width="500" src="/image/Ihor.jpg" alt="Ihor">
-                <img width="500" src="/image/Olha.jpg" alt="Olha">
-                <img width="500" src="/image/Mykola.jpg" alt="Mykola">
-                <img width="500" src="/image/Myhalo.jpg" alt="Myhalo">
+                <img width="500" src="image/Ihor.jpg" alt="Ihor">
+                <img width="500" src="image/Olha.jpg" alt="Olha">
+                <img width="500" src="image/Mykola.jpg" alt="Mykola">
+                <img width="500" src="image/Myhalo.jpg" alt="Myhalo">
               </div>
         </div>
     </main>
