--- a/index.html
+++ b/index.html
@@ -9,80 +9,88 @@
 <body>
     <header>
         <div class="header">
-            <p>WebStudio</p>
-            <nav><a href="studio" target="_blank">студія</a></nav>
-            <p>портфоліо</p>
-            <p>контакти</p>
-            <a href="info@devstudio.com">info@devstudio.com</a>
-            <a href="+380961111111">+38 096 111 11 11</a>
+            <a href="./index.html">WebStudio</a>
+            <ul class="header_info">
+                <li class="header_li"><a class="header_link link" href="./index.html">Студія</a></li>   
+                <li class="header_li"><a class="header_link"  href="">портфоліо</a></li>  
+                <li class="header_li"><a class="header_link" href="">контакти</a></li>
+             </ul>
+             <ul class="header_contact">
+                 <li class="header_li"><a class="header_link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+                 <li class="header_li"><a class="header_link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+             </ul>   
         </div>
     </header>
     <main>
-        <div class="main_section_one">
+        <section class="main_section_one">
             <h1 class="main_h1">Ефективні рішення для вашого бізнесу</h1>
-            <button class="main_buttom">Замовити послугу</button>
-        </div>      
-        <div class="main_section_two">
-            <div class="main_section_two_text">
-                <p class="main_section_two_p1">
-                    УВАГА ДО ДЕТАЛЕЙ
-                </p>
-                <p class="main_section_two_p2">
-                    Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-                </p>
-            </div>  
-            <div class="main_section_two_text">
-                <p class="main_section_two_p1">
-                    ПУНКТУАЛЬНІСТЬ
-                </p>
-                <p class="main_section_two_p2">
-                    Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                </p>
-            </div>  
-            <div class="main_section_two_text">
-                <p class="main_section_two_p1">
-                    ПЛАНУВАННЯ
-                </p>
-                <p class="main_section_two_p2">
-                    Так само консультація з широким активом значною мірою зумовлює.
-                </p>
-            </div>  
-            <div class="main_section_two_text">
-                <p class="main_section_two_p1">
-                    СУЧАСНІ ТЕХНОЛОГІЇ
-                </p>
-                <p class="main_section_two_p2">
-                    Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                </p>
-            </div>  
-        </div>
-        <div class="main_section_three">
-             <h3>Чим ми займаємося</h3>
-             <div class="main_section_three_img">
-                <img src="image/computer.jpg" alt="computer">
-                <img src="image/telephon.jpg" alt="telephon">
-                <img src="image/tablet.jpg" alt="tablet">
-             </div>
-        </div>
-        <div class="main_section_four">
-              <h3>Наша команда</h3>
-              <div class="main_section_four_img">
-                <img width="500" src="image/Ihor.jpg" alt="Ihor">
-                <img width="500" src="image/Olha.jpg" alt="Olha">
-                <img width="500" src="image/Mykola.jpg" alt="Mykola">
-                <img width="500" src="image/Myhalo.jpg" alt="Myhalo">
-              </div>
-        </div>
+            <button type="button" class="main_buttom">Замовити послугу</button>
+        </section>      
+        <section class="main_section_two">
+            <ul class="main_section_two_text">
+                <li class="main_section_two_p1">
+                   <h3>УВАГА ДО ДЕТАЛЕЙ</h3> 
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li class="main_section_two_p1">
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3> 
+                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                 </li>
+                 <li class="main_section_two_p1">
+                    <h3>ПЛАНУВАННЯ</h3> 
+                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                 </li>
+                 <li class="main_section_two_p1">
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3> 
+                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                 </li>
+            </ul>             
+        </section>
+        <section class="main_section_three">
+             <h2>Чим ми займаємося</h2>
+             <ul class="main_section_three_img">
+                <li><img width="370" src="image/computer.jpg" alt="computer"></li>
+                <li><img width="370" src="image/telephon.jpg" alt="telephon"></li>
+                <li><img width="370" src="image/tablet.jpg" alt="tablet"></li>
+             </ul>
+        </section>
+        <section class="main_section_four">
+              <h2>Наша команда</h2>
+              <ul class="main_section_four_img">
+                <li>
+                    <img width="270" src="image/Ihor.jpg" alt="Ihor">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img width="270" src="image/Olha.jpg" alt="Olha">
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img width="270" src="image/Mykola.jpg" alt="Mykola">
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img width="270" src="image/Myhalo.jpg" alt="Myhalo">
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
+                </li>
+              </ul>
+        </section>
     </main>
     <footer>
-        <div class="footer_contact">
-            <p>WebStudio</p>
+        <section class="footer_contact">
+            <a href="./index.html">WebStudio</a> 
             <address>
-                м. Київ, пр-т Лесі Українки, 26                
-            </address>
-            <a href="info@devstudio.com">info@devstudio.com</a>
-            <a href="+380961111111">+38 096 111 11 11</a>            
-        </div>
+                <ul>
+                    <li><a href="https://goo.gl/maps/jwEgqPU8U9fwKJXE7" target="_blank" >м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>                               
+            </address>                        
+        </section>
     </footer>
 </body>
 </html>
