--- a/index.html
+++ b/index.html
@@ -1,96 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <title>Studio</title>
 </head>
 <body>
-    <header>
-        <div class="header">
-            <a href="./index.html">WebStudio</a>
-            <ul class="header_info">
-                <li class="header_li"><a class="header_link link" href="./index.html">Студія</a></li>   
-                <li class="header_li"><a class="header_link"  href="">портфоліо</a></li>  
-                <li class="header_li"><a class="header_link" href="">контакти</a></li>
-             </ul>
-             <ul class="header_contact">
-                 <li class="header_li"><a class="header_link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-                 <li class="header_li"><a class="header_link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-             </ul>   
-        </div>
+    <header class="header">       
+            <nav class="header_nav_menu">                
+                <ul class="header_nav">
+                    <li class="header_li"><a class="contact_link header__link" href="./index.html"><span class="header-web-1">Web</span>Studio</a></li>
+                    <li class="header_li"><a class="contact_link" href="./index.html">Студія</a></li>   
+                    <li class="header_li"><a class="contact_link" href="./portfolio.html" target="_blank">портфоліо</a></li>  
+                    <li class="header_li"><a class="contact_link" href="">контакти</a></li>
+                 </ul>
+            </nav>
+            <ul class="header_contact">
+                <li class="header_li"><a class="contact_link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+                <li class="header_li"><a class="contact_link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>                            
     </header>
     <main>
-        <section class="main_section_one">
-            <h1 class="main_h1">Ефективні рішення для вашого бізнесу</h1>
+        <section class="main_section_one">            
+            <h1 class="main_title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button" class="main_buttom">Замовити послугу</button>
         </section>      
-        <section class="main_section_two">
+        <section class="main_section_two">   
+            <h2 hidden>Привілеї</h2>         
             <ul class="main_section_two_text">
-                <li class="main_section_two_p1">
-                   <h3>УВАГА ДО ДЕТАЛЕЙ</h3> 
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <li class="main_section_two_p p1">
+                   <h3 class="main_about-title">УВАГА ДО ДЕТАЛЕЙ</h3> 
+                    <p class="main_about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-                <li class="main_section_two_p1">
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3> 
-                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <li class="main_section_two_p p2">
+                    <h3 class="main_about-title">ПУНКТУАЛЬНІСТЬ</h3> 
+                     <p class="main_about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                  </li>
-                 <li class="main_section_two_p1">
-                    <h3>ПЛАНУВАННЯ</h3> 
-                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                 <li class="main_section_two_p p2" >
+                    <h3 class="main_about-title">ПЛАНУВАННЯ</h3> 
+                     <p class="main_about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                  </li>
-                 <li class="main_section_two_p1">
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3> 
-                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                 <li class="main_section_two_p p3">
+                    <h3 class="main_about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3> 
+                     <p class="main_about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                  </li>
             </ul>             
         </section>
         <section class="main_section_three">
-             <h2>Чим ми займаємося</h2>
+             <h2 class="main_section_title">Чим ми займаємося</h2>
              <ul class="main_section_three_img">
-                <li><img width="370" src="image/computer.jpg" alt="computer"></li>
-                <li><img width="370" src="image/telephon.jpg" alt="telephon"></li>
-                <li><img width="370" src="image/tablet.jpg" alt="tablet"></li>
+                <li class="main_section_three-li"><img width="370" src="./image/computer.jpg" alt="computer"></li>
+                <li class="main_section_three-li"><img width="370" src="./image/telephon.jpg" alt="telephon"></li>
+                <li class="main_section_three-li"><img width="370" src="./image/tablet.jpg" alt="tablet"></li>
              </ul>
         </section>
         <section class="main_section_four">
-              <h2>Наша команда</h2>
-              <ul class="main_section_four_img">
+              <h2 class="main_section_title">Наша команда</h2>
+              <ul class="main_team-title">
                 <li>
-                    <img width="270" src="image/Ihor.jpg" alt="Ihor">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <div class="main_team-box">
+                        <img width="270" src="./image/ihor.jpg" alt="Ihor">
+                        <h3 class="main_team-name">Ігор Дем'яненко</h3>
+                        <p class="team-position">Product Designer</p>
+                    </div>                    
                 </li>
                 <li>
-                    <img width="270" src="image/Olha.jpg" alt="Olha">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <div class="main_team-box">
+                        <img width="270" src="./image/olha.jpg" alt="Olha">
+                        <h3 class="main_team-name">Ольга Рєпіна</h3>
+                        <p class="team-position">Frontend Developer</p>
+                    </div>                    
                 </li>
                 <li>
-                    <img width="270" src="image/Mykola.jpg" alt="Mykola">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <div class="main_team-box">
+                        <img width="270" src="./image/mykola.jpg" alt="Mykola">
+                        <h3 class="main_team-name">Микола Тарасов</h3>
+                        <p class="team-position">Marketing</p>
+                    </div>                    
                 </li>
                 <li>
-                    <img width="270" src="image/Myhalo.jpg" alt="Myhalo">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <div class="main_team-box">
+                        <img width="270" src="./image/myhalo.jpg" alt="Myhalo">
+                        <h3 class="main_team-name">Михайло Єрмаков</h3>
+                        <p class="team-position">UI Designer</p>
+                    </div>                    
                 </li>
               </ul>
         </section>
     </main>
     <footer>
-        <section class="footer_contact">
-            <a href="./index.html">WebStudio</a> 
-            <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/jwEgqPU8U9fwKJXE7" target="_blank" >м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <div class="footer_contact">
+            <a class="footer_contact-web" href="./index.html">Web<span class="footer-studio">Studio</span></a> 
+            <address class="footer-address">
+                <ul class="footer_contact-ul">
+                    <li ><a class="footer_contact-lii" href="https://goo.gl/maps/jwEgqPU8U9fwKJXE7" target="_blank" >м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li ><a class="footer_contact-li" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li ><a class="footer_contact-li" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>                               
             </address>                        
-        </section>
+        </div>
     </footer>
 </body>
 </html>
