--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
               <ul class="main_team-title">
                 <li>
                     <div class="main_team-box">
-                        <img width="270" src="./image/ihor.jpg" alt="Ihor">
+                        <img width="270" src="./image/ihor.jpg" alt="ihor">
                         <h3 class="main_team-name">Ігор Дем'яненко</h3>
                         <p class="team-position">Product Designer</p>
                     </div>                    
                 </li>
                 <li>
                     <div class="main_team-box">
-                        <img width="270" src="./image/olha.jpg" alt="Olha">
+                        <img width="270" src="./image/olha.jpg" alt="olha">
                         <h3 class="main_team-name">Ольга Рєпіна</h3>
                         <p class="team-position">Frontend Developer</p>
                     </div>                    
                 </li>
                 <li>
                     <div class="main_team-box">
-                        <img width="270" src="./image/mykola.jpg" alt="Mykola">
+                        <img width="270" src="./image/mykola.jpg" alt="mykola">
                         <h3 class="main_team-name">Микола Тарасов</h3>
                         <p class="team-position">Marketing</p>
                     </div>                    
                 </li>
                 <li>
                     <div class="main_team-box">
-                        <img width="270" src="./image/myhalo.jpg" alt="Myhalo">
+                        <img width="270" src="./image/myhalo.jpg" alt="myhalo">
                         <h3 class="main_team-name">Михайло Єрмаков</h3>
                         <p class="team-position">UI Designer</p>
                     </div>                    
